--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[7.2m]
+
+2018-12-11  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2m (rev. M).
+
 2018-11-12  Ivan Maidanski <ivmai@mail.ru>
 
 	* cord/cordbscs.c (CORD__pos_fetch, CORD__next): Call ABORT() if
