--- a/ChangeLog
+++ b/ChangeLog
@@ -2,12 +2,22 @@
 == [8.1.0] (development) ==
 
 * Add I_HOLD_LOCK assertion to expand_hp_inner and related functions
+* Eliminate 'hash_val value is never used' cppcheck false positive
+* Eliminate 'stop variable is always 0' compiler warning in print_callers
 * Enable compilation without C runtime (Win32)
 * New API function to get size of object debug header
+* Remove goto statement in print_callers (code refactoring)
+* Remove redundant options for building 'cord' in gc.mak
 * Remove redundant type casts in backgraph HEIGHT_UNKNOWN/IN_PROGRESS
+* Update libgc.so version info to differentiate against v8.0.x
+* Use atomics on PS4
 * Workaround '*_stubborn function is never used' cppcheck warnings
 * Workaround 'GC_get_thr_restart_signal is never used' cppcheck warning
+* Workaround '__data_start<_etext is always false' cppcheck false positive
+* Workaround 'argument dummy to GC_noop1 is always 1' cppcheck false positive
 * Workaround 'identical inner return condition always true' cppcheck warning
+* Workaround 'name var reassign before old value use' cppcheck false positive
+* Workaround 'nl-result_buf is out of bounds' cppcheck false positive
 * Workaround 'var reassigned before old value use' cppcheck false positive
 
 Also, includes 8.0.2 changes
