Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -280,6 +280,7 @@ Melissa O'Neill <oneill@cs.sfu.ca>
 Michael Arnoldus <chime@proinf.dk>
 Michael DeRoy <deroymichael@gmail.com>
 Michael Fox <mfox@cavium.com>
+Michael Herring <khakionion@gmail.com>
 Michael Smith <msmith@spinnakernet.com>
 Michael Spertus <mps@geodesic.com>
 Michel Schinz <schinz@alphanet.ch>
