--- a/ChangeLog
+++ b/ChangeLog
@@ -795,6 +795,14 @@ Also, includes 7.4.6 changes
 Also, includes 7.4.4 changes
 
 
+== [7.4.18] (not released yet) ==
+
+* Fix 'wrong __data_start/_end pair' error on Android
+* Fix thread_info() count argument value (OS X)
+
+Also, includes 7.2n changes
+
+
 == [7.4.16] 2018-12-13 ==
 
 * Fix 'collecting from unknown thread' abort in leak-finding mode for Win32
@@ -1295,6 +1303,16 @@ Also, includes 7.2e, 7.2d, 7.2c, 7.2b changes
 * Use pthread_key for thread-local storage on FreeBSD
 * Use union of AO_t and word to favor strict-aliasing compiler optimization
 Also, includes 7.2 changes
+
+
+== [7.2n] (not released yet) ==
+
+* Fix 'mprotect remapping failed' abort on NetBSD with PaX enabled
+* Fix 'unexpected mark stack overflow' abort in push_all_stack
+* Fix BSD_TIME variant of MS_TIME_DIFF for the case of a.tv_usec < b.tv_usec
+* Fix GetThreadContext stale register values use if WoW64 (Win32)
+* Fix executable memory allocation in GC_unix_get_mem
+* Fix invalid initializer of CLOCK_TYPE variables if BSD_TIME
 
 
 == [7.2m] 2018-12-11 ==
