--- a/ChangeLog
+++ b/ChangeLog
@@ -1,26 +1,35 @@
 
 == [8.1.0] (development) ==
 
+* Add API for accessing incremental GC time limit with nanosecond precision
 * Add I_HOLD_LOCK assertion to expand_hp_inner and related functions
+* Adjust printf calls in gctest check_heap_stats so that each has new-line
 * Eliminate 'hash_val value is never used' cppcheck false positive
 * Eliminate 'stop variable is always 0' compiler warning in print_callers
 * Enable compilation without C runtime (Win32)
+* Enable mprotect-based incremental GC for Linux/arm and Linux/aarch64
 * New API function to get size of object debug header
+* Remove Linux-specific commands for building cord/de from Makefile.direct
 * Remove goto statement in print_callers (code refactoring)
 * Remove redundant options for building 'cord' in gc.mak
 * Remove redundant type casts in backgraph HEIGHT_UNKNOWN/IN_PROGRESS
+* Replace "msecs" with "ms" in all comments and messages
+* Report time with a nanosecond precision where available
 * Update libgc.so version info to differentiate against v8.0.x
-* Use atomics on PS4
+* Use atomic primitives for Sony PlayStation Portable 2 and PS4
+* Use better precision Windows timers
 * Workaround '*_stubborn function is never used' cppcheck warnings
 * Workaround 'GC_get_thr_restart_signal is never used' cppcheck warning
 * Workaround '__data_start<_etext is always false' cppcheck false positive
 * Workaround 'argument dummy to GC_noop1 is always 1' cppcheck false positive
+* Workaround 'checking if unsigned expression < 0' cppcheck warnings
 * Workaround 'identical inner return condition always true' cppcheck warning
+* Workaround 'if condition is the same as the previous one' cppcheck warnings
+* Workaround 'me assigned value never used' cppcheck FP in register_my_thread
 * Workaround 'name var reassign before old value use' cppcheck false positive
 * Workaround 'nl-result_buf is out of bounds' cppcheck false positive
+* Workaround 'uninitialized variable: info' cppcheck false positive (OS X)
 * Workaround 'var reassigned before old value use' cppcheck false positive
-
-Also, includes 8.0.2 changes
 
 
 == [8.0.4] (not released yet) ==
