Update AUTHORS file (add Richard Zidlicky)

--- a/AUTHORS
+++ b/AUTHORS
@@ -313,6 +313,7 @@ Reza Shahidi
 Richard Earnshaw <rearnsha@arm.com>
 Richard Henderson <rth@redhat.com>
 Richard Sandiford <rsandifo@nildram.co.uk>
+Richard Zidlicky <Richard.Zidlicky@stud.informatik.uni-erlangen.de>
 Rob Haack <rhaack@polaris.unm.edu>
 Robert Brazile <brazile@diamond.bbn.com>
 Roger Sayle <roger@eyesopen.com>
