Update AUTHORS file (add Peter Budai)

--- a/AUTHORS
+++ b/AUTHORS
@@ -314,6 +314,7 @@ Paul Graham
 Paul Nash <paulnash@wildseed.com>
 Per Bothner <per@bothner.com>
 Peter Bigot <bigotp@acm.org>
+Peter Budai <peterbudai@hotmail.com>
 Peter Chubb <peterc@sour.sw.oz.au>
 Peter Colson <pcolson@connexus.net.au>
 Peter Housel <housel@acm.org>
