Update AUTHORS file (add Alaskan Emily)

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Akira Tagoh <tagoh@redhat.com>
 Alain Novak <alain.novak@hermes.si>
 Alan Dosser <dosser@src.dec.com>
 Alan J. Demers <ademers@cs.cornell.edu>
+Alaskan Emily <emily@alaskanemily.net>
 Aleksey Demakov <ademakov@gmail.com>
 Alessandro Bruni <alessandro.bruni@gmail.com>
 Alex Ronne Petersen <alexrp@xamarin.com>
