Fix various typos mostly in documentation files (a cherry-pick of commit e9ef2a01 from 'release-7_4')
* OS2_MAKEFILE: Fix a typo in comment ("it is there").
* doc/README: Fix typos ("is not", "gc_inline.h", "bytes from",
"processed").
* doc/README.OS2: Fix typos ("how", "linking").
* doc/README.amiga: Fix typos ("GC", "e.g.", "GC_*_typed", "i.e.",
"SMakefile.amiga", "communications").
* doc/README.cmake: Fix a typo ("go to").
* doc/README.ews4800: Fix a typo ("a unique").
* doc/README.solaris2: Fix a typo ("toolchain").
* doc/gcdescr.html: Fix typos ("then advances", "is not",
"treated by").
* doc/gcinterface.html: Fix typos ("Build it", "Allocates",
"deallocates", "forces", "Causes", "Replaces", "Registers",
"traceable_alloc", "single_client_traceable_alloc").
* doc/leak.html: Fix typos ("there is").
* doc/porting.html: Add missing ")" symbol; add missing comma; fix
typos ("collector's", "are needed", "GC_save_callers").
* include/private/gc_priv.h: Fix a typo in comment ("gc_inline.h").
* os_dep.c [GWW_VDB] (detect_GetWriteWatch, GC_gww_read_dirty): Fix
abbreviation ("Win2K") in a comment.
* os_dep.c [MSWIN32] (GC_wnt): Likewise.
* os_dep.c [GWW_VDB] (GC_gww_read_dirty): Fix a typo in comment
("behavior").

--- a/doc/README
+++ b/doc/README
@@ -138,7 +138,7 @@ address space.
 
 There are a number of routines which modify the pointer recognition
 algorithm.  GC_register_displacement allows certain interior pointers
-to be recognized even if ALL_INTERIOR_POINTERS is nor defined.
+to be recognized even if ALL_INTERIOR_POINTERS is not defined.
 GC_malloc_ignore_off_page allows some pointers into the middle of large objects
 to be disregarded, greatly reducing the probability of accidental
 retention of large objects.  For most purposes it seems best to compile
@@ -378,7 +378,7 @@ near the top of gc_priv.h.
 #define malloc(n) GC_malloc(n)
 #define calloc(m,n) GC_malloc((m)*(n))
 
-  For small pieces of VERY allocation intensive code, gc_inl.h
+  For small pieces of VERY allocation intensive code, gc_inline.h
 includes some allocation macros that may be used in place of GC_malloc
 and friends.
 
@@ -472,7 +472,7 @@ extra arguments, where appropriate.  If gc.h is included without GC_DEBUG
 defined, then all these macros will instead be defined to their nondebugging
 equivalents.  (GC_REGISTER_FINALIZER is necessary, since pointers to
 objects with debugging information are really pointers to a displacement
-of 16 bytes form the object beginning, and some translation is necessary
+of 16 bytes from the object beginning, and some translation is necessary
 when finalization routines are invoked.  For details, about what's stored
 in the header, see the definition of the type oh in dbg_mlc.c file.)
 
@@ -548,7 +548,7 @@ heap sizes.  But collection pauses will increase for larger heaps.
 They will decrease with the number of processors if parallel marking
 is enabled.
 (On 2007 vintage machines, GC times may be on the order of 5 msecs
-per MB of accessible memory that needs to be scanned and processor.
+per MB of accessible memory that needs to be scanned and processed.
 Your mileage may vary.)  The incremental/generational collection facility
 may help in some cases.
   Please address bug reports to https://github.com/ivmai/bdwgc/issues.
