--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 
+== [7.4.20] (not released yet) ==
+
+* Fix configure message about 'AIX gcc optimization fix'
+
+Also, includes 7.2o changes
+
+
 == [7.4.18] 2019-03-01 ==
 
 * Fix 'wrong __data_start/_end pair' error on Android
@@ -507,6 +514,13 @@ Also, includes 7.2e, 7.2d, 7.2c, 7.2b changes
 * Use pthread_key for thread-local storage on FreeBSD
 * Use union of AO_t and word to favor strict-aliasing compiler optimization
 Also, includes 7.2 changes
+
+
+== [7.2o] (not released yet) ==
+
+* Fix configure message about 'AIX gcc optimization fix'
+* Fix printf format specifier in simple_example.html
+* Fix various typos mostly in documentation files
 
 
 == [7.2n] 2019-03-01 ==
