Update ChangeLog file (v7.2 - v7.4 changes only)

--- a/ChangeLog
+++ b/ChangeLog
@@ -497,6 +497,7 @@ Also, includes 7.4.4 changes
 
 == [7.4.20] (not released yet) ==
 
+* Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix configure message about 'AIX gcc optimization fix'
 
 Also, includes 7.2o changes
@@ -1017,6 +1018,7 @@ Also, includes 7.2 changes
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix printf format specifier in simple_example.html
 * Fix various typos mostly in documentation files
+* Remove a misleading comment about Solaris in gc.h
 
 
 == [7.2n] 2019-03-01 ==
