--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,18 @@
 
 == [8.0.6] (not released yet) ==
 
+* Avoid compiler warning about unused d in GC_CALLOC/MALLOC_EXPLICITLY_TYPED
+* Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix compiling by Makefile.direct on OpenBSD/UltraSparc
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix incorrect markup formatting in documentation
 * Fix printf format specifier in simple_example.md
 * Fix various typos mostly in documentation files
 * Refine GC_INIT documentation about its multiple invocation
+* Refine GC_parallel documentation in gc.h
+* Remove a misleading comment about Solaris in gc.h
 * Support MSYS builds by CMake and configure
+* Update documentation about the incremental collector support
 
 
 == [8.0.4] 2019-03-02 ==
