Update AUTHORS file (add Brian J. Cardiff)

--- a/AUTHORS
+++ b/AUTHORS
@@ -85,6 +85,7 @@ Brian Beuning <bbeuning@corecard.com>
 Brian Burton <bburton@users.sourceforge.net>
 Brian D. Carlstrom <bdc@clark.lcs.mit.edu>
 Brian F. Dennis <xjam@cork.cs.berkeley.edu>
+Brian J. Cardiff <bcardiff@gmail.com>
 Brian Lewis <btlewis@eng.sun.com>
 Bruce A Henderson <woollybah@gmail.com>
 Bruce Hoult <bruce@hoult.org>
