Update AUTHORS file (add Christian Weisgerber)

--- a/AUTHORS
+++ b/AUTHORS
@@ -104,6 +104,7 @@ Chris Metcalf <cmetcalf@mellanox.com>
 Christian Joensson <christian.joensson@gmail.com>
 Christian Limpach <chris@pin.lu>
 Christian Thalinger <twisti@complang.tuwien.ac.at>
+Christian Weisgerber <naddy@openbsd.org>
 Christoffe Raffali <christophe.raffalli@univ-savoie.fr>
 Clay Spence <cds@peanut.sarnoff.com>
 Colin LeMahieu <clemahieu@gmail.com>
