Update AUTHORS file (add Jasper Lievisse Adriaanse) (a cherry-pick of commit ee682fe7 from 'release-7_6')

--- a/AUTHORS
+++ b/AUTHORS
@@ -178,6 +178,7 @@ James Dominy
 Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Wielemaker <J.Wielemaker@cs.vu.nl>
 Jani Kajala <jani@sumea.com>
+Jasper Lievisse Adriaanse <jasper@openbsd.org>
 Jay Krell <jaykrell@microsoft.com>
 Jean-Baptiste Nivois
 Jean-Claude Beaudoin <jean.claude.beaudoin@gmail.com>
