--- a/AUTHORS
+++ b/AUTHORS
@@ -194,6 +194,7 @@ Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Wielemaker <J.Wielemaker@cs.vu.nl>
 Jani Kajala <jani@sumea.com>
 Jared McNeill <jmcneill@NetBSD.org>
+Jasper Lievisse Adriaanse <jasper@openbsd.org>
 Jay Krell <jaykrell@microsoft.com>
 Jean-Baptiste Nivois
 Jean-Claude Beaudoin <jean.claude.beaudoin@gmail.com>
