--- a/ChangeLog
+++ b/ChangeLog
@@ -336,11 +336,18 @@
 
 == [7.6.14] (not released yet) ==
 
+* Add support of OpenBSD/aarch64
+* Explicitly zero-initialize trace_buf (fix trace_buf initialization)
+* Fix MPROTECT_VDB definition for single-threaded GC builds
 * Fix OS_TYPE and USE_MMAP_ANON definitions for Cygwin/x64
 * Fix compiling by Makefile.direct on OpenBSD/UltraSparc
 * Fix configure message about 'AIX gcc optimization fix'
+* Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
+* Fix incorrect define GC_OPENBSD_THREADS on sparc64
 * Fix printf format specifier in simple_example.html
+* Fix save_callers for multi-threaded case if built-in backtrace unavailable
 * Fix various typos mostly in documentation files
+* Fix word size, data start and alignment for OpenBSD/mips64(el)
 * Remove a misleading comment about Solaris in gc.h
 
 
